src/components/Button/Button.module.css
.button {
    padding: 10px 20px;
    border-radius: 16px;
    outline: none;
    border: none;
}

.button:hover {
    cursor: pointer;
}

.button:focus {
    box-shadow: 0 0 1px 2px rgb(0, 125, 255);
}

.button.button_sfpro {
    font-family: SFProText, serif;
    font-weight: bold;
    line-height: 1.14;
    letter-spacing: 0.2px;
    text-align: center;
    outline: none;
}

.button.button_roboto {
    font-size: 14px;
    font-family: Roboto, serif;
    font-weight: 500;
    line-height: 1.14;
    letter-spacing: 0.5px;
    text-align: center;
}

.button.button_green {
    background-color: #08a652;
    color: #fff;
}

.button.button_red {
    background-color: #da7675;
    color: #fff;
}

.button.button_blue {
    background-color: #0000FF;
    color: #fff;
}

.button.button_clear {
    color: #068746;
    background-color: transparent;
}

.button.button_disabled {
    background-color: #c2c2c2;
}

.button.smallest {
    font-size: 10px;
}

.button.small {
    font-size: 14px;
}
.button.medium {
    font-size: 16px;
}

